--- a/gs.css
+++ b/gs.css
@@ -26,3 +26,23 @@
     color: black;
     background-color:beige;
 }
+
+table {
+    border: 1px solid black;
+    margin-left: 400px;
+    margin-top: 50px;
+}
+
+th {
+    border: 1px solid black;
+    background-color:blueviolet;
+    padding: 5px;
+}
+
+td {
+    border: 1px solid black;
+    padding: 5px;
+    text-align: left;
+}
+
+tr:nth-child(odd) {background-color: lightgray;}
