--- a/gs.css
+++ b/gs.css
@@ -19,18 +19,21 @@
     font-size: 15px;
     color: black;
     background-color: aquamarine;
+    padding: 10px;
 }
 .WILFRED{
     font-family: 'Courier New', Courier, monospace;
     font-size: 15px;
     color: black;
     background-color:beige;
+    padding: 10px;
 }
 
 table {
     border: 1px solid black;
     margin-left: 400px;
     margin-top: 50px;
+    
 }
 
 th {
@@ -46,3 +49,34 @@ td {
 }
 
 tr:nth-child(odd) {background-color: lightgray;}
+.PHOEBE:hover, .WILFRED:hover {
+    text-shadow: 3px 3px 3px grey;
+    border: 3px solid black;
+}
+ul {
+    list-style-type: none;
+    margin-top: 20px;
+    padding: 0;
+    overflow: hidden;
+    background-color: gray;
+  }
+  
+  .nav-item-next {
+    float: right;
+  }
+
+  .nav-item-prev {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
